[tool.black]
line-length = 100

[tool.poetry]
name = "call_py_fort"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fast-oad = "1.0.5"
openmdao = "3.17"

[tool.poetry.dev-dependencies]
numpy = "^1.21.0"
cffi = "^1.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
